# Hybrid-API-Scraping-Collector-Template

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: sources.example.yml
docs/: CONFIG_GUIDE.md  SECURITY_AND_LEGAL.md  architecture.md  operations.md  testing.md
sample_output/: unified_records.sample.csv
src/hybrid_collector/: api_client.py  cli.py  config.py  exporter.py  normalizer.py  scheduler_stub.py  scraper.py  validator.py
tests/: test_api_client.py  test_cli.py  test_config.py  test_exporter.py  test_integration_example_config.py  test_normalizer.py  test_scheduler_stub.py  test_scraper.py  test_validator.py
